==> weston-embedded/uC-Probe-Target/Target/Communication/Generic/RS-232/Ports/NXP/LH79520/probe_rs232c.c <==
#include  <probe_com.h>
#include  <probe_rs232.h>
#define  LH79520_REG_UART0_BASE          ((CPU_INT32U)0xFFFC0000)
#define  LH79520_REG_UART1_BASE          ((CPU_INT32U)0xFFFC1000)
#define  LH79520_REG_UART2_BASE          ((CPU_INT32U)0xFFFC2000)
#define  LH79520_REG_IOCON_BASE          ((CPU_INT32U)0xFFFE5000)
#define  LH79520_REG_RCPC_BASE           ((CPU_INT32U)0xFFFE2000)
#define  LH79520_REG_VIC_BASE            ((CPU_INT32U)0xFFFFF000)
#define  LH79520_VIC_UART0                                23
#define  LH79520_VIC_UART1                                24
#define  LH79520_VIC_UART2                                25
#define  LH79520_REG_UART0_DR       (*(volatile CPU_INT32U *)(LH79520_REG_UART0_BASE + 0x0000))
#define  LH79520_REG_UART0_RSR      (*(volatile CPU_INT32U *)(LH79520_REG_UART0_BASE + 0x0004))
#define  LH79520_REG_UART0_ECR      (*(volatile CPU_INT32U *)(LH79520_REG_UART0_BASE + 0x0004))
#define  LH79520_REG_UART0_FR       (*(volatile CPU_INT32U *)(LH79520_REG_UART0_BASE + 0x0018))
#define  LH79520_REG_UART0_ILPR     (*(volatile CPU_INT32U *)(LH79520_REG_UART0_BASE + 0x0020))
#define  LH79520_REG_UART0_IBRD     (*(volatile CPU_INT32U *)(LH79520_REG_UART0_BASE + 0x0024))
#define  LH79520_REG_UART0_FBRD     (*(volatile CPU_INT32U *)(LH79520_REG_UART0_BASE + 0x0028))
#define  LH79520_REG_UART0_LCR_H    (*(volatile CPU_INT32U *)(LH79520_REG_UART0_BASE + 0x002C))
#define  LH79520_REG_UART0_CR       (*(volatile CPU_INT32U *)(LH79520_REG_UART0_BASE + 0x0030))

void  ProbeRS232_InitTarget (CPU_INT32U baud_rate)
{
    CPU_INT32U  idiv;
    CPU_INT32U  fdiv;
    CPU_INT32U  clk_freq;


                                                                /* ------------- COMPUTE DIVISOR BAUD RATE ------------ */
    clk_freq = 14745600;
    idiv     = clk_freq / (16 * baud_rate);
    fdiv     = clk_freq % (16 * baud_rate);
    fdiv     = ((((8 * fdiv) / baud_rate) + 1) / 2);

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
                                                                /* --------------- SETUP VIC FOR UART0 ---------------- */
    LH79520_REG_VIC_INTENCLR    =   1 << LH79520_VIC_UART1;     /* Disable interrupt.                                   */
    LH79520_REG_VIC_INTSEL     &= ~(1 << LH79520_VIC_UART1);    /* Select  interrupt.                                   */
                                                                /* Set the vector address.                              */
    LH79520_REG_VIC_VECTADDR0   = (CPU_INT32U)ProbeRS232_RxTxISRHandler;
    LH79520_REG_VIC_VECTCNTL0   = 0x20 | LH79520_VIC_UART1;     /* Enable vectored interrupts.                          */

                                                                /* ----------------- IOCON FOR UART0 ------------------ */
    LH79520_REG_IOCON_UARTMUX  |= DEF_BIT_02 | DEF_BIT_03;

                                                                /* ------------------- SETUP UART0 -------------------- */
    LH79520_REG_RCPC_PCLKCTRL1 &= ~DEF_BIT_01;                  /* Enable clock.                                        */
    LH79520_REG_RCPC_PCLKSEL1  &= ~DEF_BIT_01;                  /* Select oscillator clock.                             */

    LH79520_REG_UART1_IBRD      =  idiv;
    LH79520_REG_UART1_FBRD      =  fdiv;

    LH79520_REG_UART1_LCR_H     = DEF_BIT_05 | DEF_BIT_06;      /* 8 data bits.                                         */
    LH79520_REG_UART1_IFLS      = DEF_BIT_NONE;
    LH79520_REG_UART1_FR        = DEF_BIT_NONE;
    LH79520_REG_UART1_CR        = DEF_BIT_00
                            | DEF_BIT_08
                            | DEF_BIT_09;
    LH79520_REG_UART1_DMACTRL   = DEF_BIT_NONE;
    LH79520_REG_UART1_ECR       = DEF_BIT_NONE;
    LH79520_REG_UART1_IMSC      = DEF_BIT_NONE;                 /* Disable all interrupts.                              */
    LH79520_REG_UART1_ICR       = DEF_BIT_04                    /* Clear   all interrupts.                              */
                            | DEF_BIT_05
                            | DEF_BIT_06
                            | DEF_BIT_07
                            | DEF_BIT_08
                            | DEF_BIT_09
                            | DEF_BIT_10;

                                                                /* -------------------- ENABLE INT -------------------- */
    LH79520_REG_VIC_INTEN       =  (1 << LH79520_VIC_UART1);    /* Enable interrupt.                                    */
#endif
}

void  ProbeRS232_RxTxISRHandler (void)
{
    CPU_INT08U  rx_data;
    CPU_INT32U  status;


#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    status = LH79520_REG_UART1_MIS;

    if ((status & DEF_BIT_05) == DEF_BIT_05) {                  /* Transmitted character?                               */
        while (((LH79520_REG_UART1_IMSC & DEF_BIT_05) == DEF_BIT_05) &&
               ((LH79520_REG_UART1_FR   & DEF_BIT_05) == 0)) {
            ProbeRS232_TxHandler();
        }
    }

    if (((status & DEF_BIT_04) == DEF_BIT_04) ||                /* Received a character?                                */
        ((status & DEF_BIT_06) == DEF_BIT_06)) {

        while ((LH79520_REG_UART1_FR & DEF_BIT_04) == 0) {
            rx_data = (CPU_INT08U)(LH79520_REG_UART1_DR & 0xFF);
            ProbeRS232_RxHandler(rx_data);
        }
    }

    LH79520_REG_UART1_ICR = status;
#endif
}

void  ProbeRS232_Tx1 (CPU_INT08U tx_data)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    LH79520_REG_UART1_DR = tx_data;
#endif
}
