==> weston-embedded/uC-Probe-Target/Target/Communication/Generic/RS-232/Ports/LuminaryMicro/LM3Sxxxx/probe_rs232c.c <==
#include  <probe_com.h>
#include  <probe_rs232.h>
#include  <includes.h>
#define  UART0DR            (*(CPU_REG32 *)(UART0_BASE + 0x0000))
#define  UART0FR            (*(CPU_REG32 *)(UART0_BASE + 0x0018))
#define  UART0IBRD          (*(CPU_REG32 *)(UART0_BASE + 0x0024))
#define  UART0FBRD          (*(CPU_REG32 *)(UART0_BASE + 0x0028))
#define  UART0LCRH          (*(CPU_REG32 *)(UART0_BASE + 0x002C))
#define  UART0CTL           (*(CPU_REG32 *)(UART0_BASE + 0x0030))
#define  UART0IFLS          (*(CPU_REG32 *)(UART0_BASE + 0x0034))
#define  UART0IM            (*(CPU_REG32 *)(UART0_BASE + 0x0038))
#define  UART0MIS           (*(CPU_REG32 *)(UART0_BASE + 0x0040))
#define  UART0ICR           (*(CPU_REG32 *)(UART0_BASE + 0x0044))
#define  UART1DR            (*(CPU_REG32 *)(UART1_BASE + 0x0000))
#define  UART1FR            (*(CPU_REG32 *)(UART1_BASE + 0x0018))
#define  UART1IBRD          (*(CPU_REG32 *)(UART1_BASE + 0x0024))
#define  UART1FBRD          (*(CPU_REG32 *)(UART1_BASE + 0x0028))
#define  UART1LCRH          (*(CPU_REG32 *)(UART1_BASE + 0x002C))
#define  UART1CTL           (*(CPU_REG32 *)(UART1_BASE + 0x0030))
#define  UART1IFLS          (*(CPU_REG32 *)(UART1_BASE + 0x0034))
#define  UART1IM            (*(CPU_REG32 *)(UART1_BASE + 0x0038))
#define  UART1MIS           (*(CPU_REG32 *)(UART1_BASE + 0x0040))
#define  UART1ICR           (*(CPU_REG32 *)(UART1_BASE + 0x0044))
#define  UARTCTL_UARTEN             DEF_BIT_00
#define  UARTCTL_TXE                DEF_BIT_08

void  ProbeRS232_InitTarget (CPU_INT32U baud_rate)
{
    CPU_INT32U  idiv;
    CPU_INT32U  fdiv;
    CPU_INT32U  clk_freq;


                                                                /* --------------- COMPUTE DIVISOR BAUD RATE -------------- */
    clk_freq = SysCtlClockGet();
    idiv     = clk_freq / (16 * baud_rate);
    fdiv     = clk_freq % (16 * baud_rate);
    fdiv     = ((((2 * fdiv * 4) / baud_rate) + 1) / 2);

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)

    SysCtlPeripheralEnable(SYSCTL_PERIPH_UART0);
    SysCtlPeripheralReset(SYSCTL_PERIPH_UART0);

                                                                /* ------------------- ENABLE UART0 I/Os ------------------ */
                                                                /* PA[0] & PA[1]                                            */
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOA);
    GPIOPinTypeUART(GPIO_PORTA_BASE, GPIO_PIN_0 | GPIO_PIN_1);

                                                                /* --------------------- SETUP UART0 ---------------------- */
    UART0CTL  &= ~UARTCTL_UARTEN;
    UART0LCRH &= ~UARTLCRH_FEN;
    UART0IBRD  =  idiv;
    UART0FBRD  =  fdiv;
    UART0LCRH  =  UARTLCRH_WLEN_8 /*|
                  UARTLCRH_FEN*/;
    UART0CTL   =  UARTCTL_RXE |
                  UARTCTL_TXE |
                  UARTCTL_UARTEN;
    UART0IFLS  =  0x00000000;
    UART0ICR   =  UARTINT_OE |
                  UARTINT_BE |
                  UARTINT_PE |
                  UARTINT_FE |
                  UARTINT_RT |
                  UARTINT_TX |
                  UARTINT_RX;

    BSP_IntVectSet(BSP_INT_ID_UART0, ProbeRS232_RxTxISRHandler);
    BSP_IntEn(BSP_INT_ID_UART0);                                /* ------------ INITIALIZE INTERRUPT FOR UART0 ------------ */
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)

    SysCtlPeripheralEnable(SYSCTL_PERIPH_UART1);
    SysCtlPeripheralReset(SYSCTL_PERIPH_UART1);
                                                                /* ------------------- ENABLE UART0 I/Os ------------------ */
                                                                /* PD[3] & PD[4]                                            */
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOD);
    GPIOPinTypeUART(GPIO_PORTD_BASE, GPIO_PIN_2 | GPIO_PIN_3);

                                                                /* --------------------- SETUP UART1 ---------------------- */
    UART1CTL  &= ~UARTCTL_UARTEN;
    UART1LCRH &= ~UARTLCRH_FEN;
    UART1IBRD  =  idiv;
    UART1FBRD  =  fdiv;
    UART1LCRH  =  UARTLCRH_WLEN_8 /*|
                  UARTLCRH_FEN*/;
    UART1CTL   =  UARTCTL_RXE |
                  UARTCTL_TXE |
                  UARTCTL_UARTEN;
    UART1IFLS  =  0x00000000;
    UART1ICR   =  UARTINT_OE |
                  UARTINT_BE |
                  UARTINT_PE |
                  UARTINT_FE |
                  UARTINT_RT |
                  UARTINT_TX |
                  UARTINT_RX;

    BSP_IntVectSet(BSP_INT_ID_UART1, ProbeRS232_RxTxISRHandler);
    BSP_IntEn(BSP_INT_ID_UART1);                                /* ------------ INITIALIZE INTERRUPT FOR UART1 ------------ */
#endif
}

void  ProbeRS232_RxTxISRHandler (void)
{
    CPU_INT32U  status;
    CPU_INT08U  rx_data;


#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    status = UART0MIS;

    if ((status & UARTINT_TX) == UARTINT_TX) {
        while (((UART0IM & UARTINT_TX) == UARTINT_TX) && ((UART0FR & UARTFR_TXFF) == 0)) {
            ProbeRS232_TxHandler();                             /* Call the generic Tx handler                              */
        }
    }

    if (((status & UARTINT_RX) == UARTINT_RX) ||
        ((status & UARTINT_RT) == UARTINT_RT)) {
        while ((UART0FR & UARTFR_RXFE) == 0) {
            rx_data = (UART0DR & 0xFF);
            ProbeRS232_RxHandler(rx_data);                      /* Call the generic Rx handler                              */
        }
    }

    UART0ICR = status;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    status = UART1MIS;

    if ((status & UARTINT_TX) == UARTINT_TX) {
        while (((UART1IM & UARTINT_TX) == UARTINT_TX) && ((UART1FR & UARTFR_TXFF) == 0)) {
            ProbeRS232_TxHandler();                             /* Call the generic Tx handler                              */
        }
    }

    if ((status & UARTINT_RX) == UARTINT_RX) {
        while ((UART1FR & UARTFR_RXFE) == 0) {
            rx_data = (UART1DR & 0xFF);
            ProbeRS232_RxHandler(rx_data);                      /* Call the generic Rx handler                              */
        }
    }

    UART1ICR = status;
#endif
}

void  ProbeRS232_Tx1 (CPU_INT08U c)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    UART0DR = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    UART1DR = c;
#endif
}
